# rust_opengl

./: .editorconfig  Cargo.toml  README.md
shaders/: fragment.glsl  vertex.glsl
shaders/light/: fragment.glsl  vertex.glsl
src/: geometry.rs  log.rs  logging.rs  main.rs  metadata.rs  shader.rs
