[package]
name = "rust_opengl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "0.13.1"
glutin = "0.28.0"
nalgebra-glm = "0.18.0"
semver = "1.0.21"
bytemuck = "1.14.0"
log = "0.4.20"
simplelog = "0.12.1"
simple-error = "0.3.0"
